--- a/conj_grad.ipynb
+++ b/conj_grad.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import copy"
    ]
   },
   {
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
     "    for j in range(1, N):  # y\n",
     "        for i in range(1, N):  # x\n",
     "            k = idx(i, j)\n",
-    "            A[k, k] = -2 * (a(0, 0) + b(0, 0)) / h ** 2\n",
+    "            A[k, k] = -2 * (a(0, 0) + b(0, 0)) / h**2\n",
     "            x, y = i * h, j * h\n",
     "            b_k = -f(x, y)\n",
     "\n",
@@ -94,13 +95,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conjugate Gradient Method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conjugate_gradient(A: np.ndarray, b_vec: np.ndarray, eps: float = 1e-2) -> np.ndarray:\n",
+    "    x_cur = np.zeros_like(b_vec)\n",
+    "    r_cur = b_vec - A @ x_cur\n",
+    "    p_cur = copy.deepcopy(r_cur)\n",
+    "\n",
+    "    while np.linalg.norm(r_cur) > eps:\n",
+    "        r_prev = copy.deepcopy(r_cur)\n",
+    "        p_prev = copy.deepcopy(p_cur)\n",
+    "        alpha_prev = np.dot(r_prev, r_prev) / np.dot(A @ p_prev, p_prev)\n",
+    "        x_prev = copy.deepcopy(x_cur)\n",
+    "        x_cur = x_prev + alpha_prev * p_prev\n",
+    "        r_cur = r_prev - alpha_prev * A @ p_prev\n",
+    "        beta_prev = np.dot(r_cur, r_cur) / np.dot(r_prev, r_prev)\n",
+    "        p_cur = r_cur + beta_prev * p_prev\n",
+    "        print(f\"norm(r_cur) = {np.linalg.norm(r_cur)}\\n\")\n",
+    "    return x_cur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 4\n",
-    "A, b_vec = SLAE_compilation(N)"
+    "A, b_vec = SLAE_compilation(N)\n",
+    "\n",
+    "x = conjugate_gradient(A=A, b_vec=b_vec)\n",
+    "\n",
+    "x"
    ]
   }
  ],
