implement SLAE compilation and methods. Fix bugs in SLAE compilation

--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,62 +54,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SLAE compilation"
+    "Mapping function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SLAE_compilation(N: int) -> tuple[np.ndarray, np.ndarray]:\n",
-    "    def idx(i, j):\n",
-    "        return (j - 1) * (N - 1) + (i - 1)\n",
-    "\n",
-    "    n = (N - 1) ** 2\n",
-    "\n",
-    "    A = np.zeros((n, n))\n",
-    "    b_vec = np.zeros(n)\n",
-    "\n",
-    "    h = 1.0 / N\n",
-    "\n",
-    "    for j in range(1, N):  # y\n",
-    "        for i in range(1, N):  # x\n",
-    "            k = idx(i, j)\n",
-    "            A[k, k] = -2 * (a(0, 0) + b(0, 0)) / h**2\n",
-    "            x, y = i * h, j * h\n",
-    "            b_k = -f(x, y)\n",
-    "\n",
-    "            for di, dj, coeff in [(-1, 0, a), (1, 0, a), (0, -1, b), (0, 1, b)]:\n",
-    "                ni, nj = i + di, j + dj\n",
-    "                if 1 <= ni <= N - 1 and 1 <= nj <= N - 1:\n",
-    "                    A[k, idx(ni, nj)] = coeff(0, 0) / h**2\n",
-    "                else:\n",
-    "                    xg, yg = ni * h, nj * h\n",
-    "                    b_k += coeff(0, 0) * solution(xg, yg) / h**2\n",
-    "\n",
-    "            b_vec[k] = b_k\n",
-    "\n",
-    "    return A, b_vec"
+    "def idx(i, j, N):\n",
+    "    return (j-1) * (N - 1) + (i-1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conjugate Gradient Method"
+    "SLAE compilation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SLAE_compilation(N: int):\n",
+    "    h = 1.0 / N\n",
+    "    size = (N - 1) ** 2 \n",
+    "    \n",
+    "    A = np.zeros((size, size))\n",
+    "    rhs = np.zeros(size)\n",
+    "    \n",
+    "    coeff_x = a(0, 0) / h**2\n",
+    "    coeff_y = b(0, 0) / h**2\n",
+    "    \n",
+    "    for j in range(1, N):  # y\n",
+    "        for i in range(1, N):  # x\n",
+    "            k = idx(i, j, N=N)\n",
+    "            x, y = i*h, j*h\n",
+    "            \n",
+    "            # diagonal\n",
+    "            A[k, k] = 2*(a(0, 0)+b(0, 0))/h**2\n",
+    "            rhs[k] = f(x, y) \n",
+    "            \n",
+    "            # neighbours\n",
+    "            # east (i+1,j)\n",
+    "            if i < N-1:\n",
+    "                A[k, idx(i+1,j, N)] = -coeff_x\n",
+    "            else:  # border x=1\n",
+    "                rhs[k] += coeff_x * solution(1.0, y)\n",
+    "            \n",
+    "            # west (i-1,j)\n",
+    "            if i > 1:\n",
+    "                A[k, idx(i-1,j, N)] = -coeff_x\n",
+    "            else:  # border x=0\n",
+    "                rhs[k] += coeff_x * solution(0.0, y)\n",
+    "            \n",
+    "            # nord (i,j+1)\n",
+    "            if j < N-1:\n",
+    "                A[k, idx(i,j+1, N)] = -coeff_y\n",
+    "            else:  # border y=1\n",
+    "                rhs[k] += coeff_y * solution(x, 1.0)\n",
+    "            \n",
+    "            # sud (i,j-1)\n",
+    "            if j > 1:\n",
+    "                A[k, idx(i,j-1, N)] = -coeff_y\n",
+    "            else:  # border y=0\n",
+    "                rhs[k] += coeff_y * solution(x, 0.0)\n",
+    "    \n",
+    "    return A, rhs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def exact_vector(N):\n",
+    "    h = 1.0 / (N - 1)\n",
+    "    u_ex = np.zeros((N-1)**2)\n",
+    "    for j in range(1, N):\n",
+    "        for i in range(1, N):\n",
+    "            k = idx(i,j, N=N)\n",
+    "            u_ex[k] = solution(i*h, j*h)\n",
+    "\n",
+    "    return u_ex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 50\n",
+    "A, b_vec = SLAE_compilation(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_ex = exact_vector(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conjugate_gradient(A: np.ndarray, b_vec: np.ndarray, eps: float = 1e-8) -> np.ndarray:\n",
     "    x_cur = np.zeros_like(b_vec)\n",
-    "    r_cur = A @ x_cur - b_vec\n",
+    "    r_cur = b_vec - A @ x_cur\n",
     "    p_cur = copy.deepcopy(r_cur)\n",
     "\n",
     "    while np.linalg.norm(r_cur) > eps:\n",
@@ -121,7 +183,7 @@
     "        r_cur = r_prev - alpha_prev * A @ p_prev\n",
     "        beta_prev = np.dot(r_cur, r_cur) / np.dot(r_prev, r_prev)\n",
     "        p_cur = r_cur + beta_prev * p_prev\n",
-    "        print(f\"norm(r_cur) = {np.linalg.norm(r_cur)}\\n\")\n",
+    "        # print(f\"norm(r_cur) = {np.linalg.norm(r_cur)}\\n\")\n",
     "    return x_cur"
    ]
   },
@@ -131,48 +193,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 4\n",
-    "A, b_vec = SLAE_compilation(N)\n",
-    "\n",
-    "x_cg = conjugate_gradient(A=A, b_vec=b_vec)\n",
-    "x_cg"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Richardson method"
+    "u_cg = conjugate_gradient(A, b_vec)\n",
+    "max(A @ u_cg - b_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def richardson(A: np.ndarray, b_vec: np.ndarray, eps: float = 1e-8) -> np.ndarray:\n",
-    "    A = -A\n",
-    "    b_vec = -b_vec\n",
-    "\n",
-    "    eigvals = np.linalg.eigvals(A)\n",
-    "    lambda_max = max(np.abs(eigvals))\n",
+    "def convergence_test(N_list):\n",
+    "    results = []\n",
     "    \n",
-    "    tau = 1.0 / lambda_max \n",
-    "\n",
-    "    x = np.zeros_like(b_vec)\n",
-    "    r = A @ x - b_vec\n",
-    "    while np.linalg.norm(r) > eps:\n",
-    "        x = x - tau * r\n",
-    "        r = A @ x - b_vec\n",
-    "        print(f\"norm(r) = {np.linalg.norm(r)}\\n\")\n",
-    "\n",
-    "    return x"
+    "    for N in N_list:\n",
+    "        h = 1.0 / N\n",
+    "        A, b_vec = SLAE_compilation(N)\n",
+    "        \n",
+    "        u_num = np.linalg.solve(A, b_vec)\n",
+    "        \n",
+    "        u_ex = np.zeros_like(u_num)\n",
+    "        idx = 0\n",
+    "        for j in range(1, N):\n",
+    "            for i in range(1, N):\n",
+    "                x, y = i*h, j*h\n",
+    "                u_ex[idx] = solution(x, y)\n",
+    "                idx += 1\n",
+    "        \n",
+    "        err = np.max(np.abs(u_num - u_ex))\n",
+    "        results.append((N, h, err))\n",
+    "    \n",
+    "    print(f\"{'N':>6} {'h':>10} {'max error':>15} {'p (order)':>12}\")\n",
+    "    prev_err = None\n",
+    "    prev_h = None\n",
+    "    for N, h, err in results:\n",
+    "        if prev_err is None:\n",
+    "            print(f\"{N:6d} {h:10.4f} {err:15.6e} {'-':>12}\")\n",
+    "        else:\n",
+    "            p = np.log(prev_err/err) / np.log(prev_h/h)\n",
+    "            print(f\"{N:6d} {h:10.4f} {err:15.6e} {p:12.6f}\")\n",
+    "        prev_err, prev_h = err, h\n",
+    "    \n",
+    "    return results\n"
    ]
   },
   {
@@ -181,8 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_rich = richardson(A=A, b_vec=b_vec)\n",
-    "x_rich"
+    "convergence_test([10, 20, 40, 80, 120])"
    ]
   }
  ],
