put back Richardson method

--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 50\n",
+    "N = 5\n",
     "A, b_vec = SLAE_compilation(N)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +164,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conjugate gradient method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,43 +205,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Richardson method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convergence_test(N_list):\n",
-    "    results = []\n",
+    "def Richardson(A: np.ndarray, b_vec: np.ndarray, eps: float = 1e-8) -> np.ndarray:\n",
+    "\n",
+    "    eigvals = np.linalg.eigvals(A)\n",
+    "    lambda_max = max(np.abs(eigvals))\n",
     "    \n",
-    "    for N in N_list:\n",
-    "        h = 1.0 / N\n",
-    "        A, b_vec = SLAE_compilation(N)\n",
-    "        \n",
-    "        u_num = np.linalg.solve(A, b_vec)\n",
-    "        \n",
-    "        u_ex = np.zeros_like(u_num)\n",
-    "        idx = 0\n",
-    "        for j in range(1, N):\n",
-    "            for i in range(1, N):\n",
-    "                x, y = i*h, j*h\n",
-    "                u_ex[idx] = solution(x, y)\n",
-    "                idx += 1\n",
-    "        \n",
-    "        err = np.max(np.abs(u_num - u_ex))\n",
-    "        results.append((N, h, err))\n",
-    "    \n",
-    "    print(f\"{'N':>6} {'h':>10} {'max error':>15} {'p (order)':>12}\")\n",
-    "    prev_err = None\n",
-    "    prev_h = None\n",
-    "    for N, h, err in results:\n",
-    "        if prev_err is None:\n",
-    "            print(f\"{N:6d} {h:10.4f} {err:15.6e} {'-':>12}\")\n",
-    "        else:\n",
-    "            p = np.log(prev_err/err) / np.log(prev_h/h)\n",
-    "            print(f\"{N:6d} {h:10.4f} {err:15.6e} {p:12.6f}\")\n",
-    "        prev_err, prev_h = err, h\n",
-    "    \n",
-    "    return results\n"
+    "    tau = 1.0 / lambda_max \n",
+    "\n",
+    "    x = np.zeros_like(b_vec)\n",
+    "    r = A @ x - b_vec\n",
+    "    while np.linalg.norm(r) > eps:\n",
+    "        x = x - tau * r\n",
+    "        r = A @ x - b_vec\n",
+    "        # print(f\"norm(r) = {np.linalg.norm(r)}\\n\")\n",
+    "\n",
+    "    return x"
    ]
   },
   {
@@ -243,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "convergence_test([10, 20, 40, 80, 120])"
+    "u_rich = Richardson(A, b_vec)"
    ]
   }
  ],
