implement a plot of the error graph on the iterations number

--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import copy"
+    "import copy\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,39 +129,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exact solution vector"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def exact_vector(N):\n",
-    "    h = 1.0 / (N - 1)\n",
+    "    h = 1.0 / N\n",
     "    u_ex = np.zeros((N-1)**2)\n",
+    "    k = 0\n",
     "    for j in range(1, N):\n",
     "        for i in range(1, N):\n",
-    "            k = idx(i,j, N=N)\n",
-    "            u_ex[k] = solution(i*h, j*h)\n",
-    "\n",
-    "    return u_ex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 5\n",
-    "A, b_vec = SLAE_compilation(N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u_ex = exact_vector(N)"
+    "            x, y = i*h, j*h\n",
+    "            u_ex[k] = solution(x, y)\n",
+    "            k += 1\n",
+    "    return u_ex\n"
    ]
   },
   {
@@ -172,16 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conjugate_gradient(A: np.ndarray, b_vec: np.ndarray, eps: float = 1e-8) -> np.ndarray:\n",
+    "def conjugate_gradient(A: np.ndarray, b_vec: np.ndarray, eps: float, max_it: int) -> np.ndarray:\n",
+    "    it = 0\n",
+    "\n",
     "    x_cur = np.zeros_like(b_vec)\n",
     "    r_cur = b_vec - A @ x_cur\n",
     "    p_cur = copy.deepcopy(r_cur)\n",
     "\n",
-    "    while np.linalg.norm(r_cur) > eps:\n",
+    "    while np.linalg.norm(r_cur) > eps and it < max_it:\n",
     "        r_prev = copy.deepcopy(r_cur)\n",
     "        p_prev = copy.deepcopy(p_cur)\n",
     "        alpha_prev = np.dot(r_prev, r_prev) / np.dot(A @ p_prev, p_prev)\n",
@@ -191,17 +183,8 @@
     "        beta_prev = np.dot(r_cur, r_cur) / np.dot(r_prev, r_prev)\n",
     "        p_cur = r_cur + beta_prev * p_prev\n",
     "        # print(f\"norm(r_cur) = {np.linalg.norm(r_cur)}\\n\")\n",
-    "    return x_cur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u_cg = conjugate_gradient(A, b_vec)\n",
-    "max(A @ u_cg - b_vec)"
+    "        it += 1\n",
+    "    return x_cur, it"
    ]
   },
   {
@@ -213,11 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Richardson(A: np.ndarray, b_vec: np.ndarray, eps: float = 1e-8) -> np.ndarray:\n",
+    "def Richardson(A: np.ndarray, b_vec: np.ndarray, eps: float, max_it: int) -> np.ndarray:\n",
+    "    it = 0\n",
     "\n",
     "    eigvals = np.linalg.eigvals(A)\n",
     "    lambda_max = max(np.abs(eigvals))\n",
@@ -226,12 +210,27 @@
     "\n",
     "    x = np.zeros_like(b_vec)\n",
     "    r = A @ x - b_vec\n",
-    "    while np.linalg.norm(r) > eps:\n",
+    "    while np.linalg.norm(r) > eps and it < max_it:\n",
     "        x = x - tau * r\n",
     "        r = A @ x - b_vec\n",
     "        # print(f\"norm(r) = {np.linalg.norm(r)}\\n\")\n",
+    "        it += 1\n",
     "\n",
-    "    return x"
+    "    return x, it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numerical experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Error on iterations number"
    ]
   },
   {
@@ -240,7 +239,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u_rich = Richardson(A, b_vec)"
+    "number_of_nodes = np.arange(4, 30, 5)\n",
+    "max_iterations_numbers = np.arange(1, 101, 10)\n",
+    "\n",
+    "eps = 1e-20\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(15, 8))\n",
+    "axes = axes.ravel() \n",
+    "\n",
+    "for index, N in enumerate(number_of_nodes):\n",
+    "    A, b_vec = SLAE_compilation(N)\n",
+    "    errors_cg = []\n",
+    "    errors_rich = []\n",
+    "    numbers_of_iterations = []\n",
+    "\n",
+    "    u_ex = exact_vector(N)\n",
+    "\n",
+    "    for max_it in max_iterations_numbers:\n",
+    "        u_cg, it_cg = conjugate_gradient(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
+    "        u_rich, it_rich = Richardson(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
+    "        errors_cg.append(np.max(np.abs(u_cg - u_ex)))\n",
+    "        errors_rich.append(np.max(np.abs(u_rich - u_ex)))\n",
+    "\n",
+    "    ax = axes[index]\n",
+    "    ax.semilogy(max_iterations_numbers, errors_cg, color = 'blue', marker=\"o\", label=\"CG\")\n",
+    "    ax.semilogy(max_iterations_numbers, errors_rich, color = 'green', marker=\"s\", label=\"Richardson\")\n",
+    "    ax.set_title(f\"N={N}\")\n",
+    "    ax.set_xlabel(\"number of iterations\")\n",
+    "    ax.set_ylabel(\"||u - u_ex||\")\n",
+    "    ax.legend()\n",
+    "    ax.grid(True)\n",
+    "\n",
+    "fig.suptitle(\"Accuracy on iterations number for different grids\", fontsize=18)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Accuracy_on_iterations_number.pdf\")\n",
+    "plt.show()"
    ]
   }
  ],
