--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,11 +522,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Computetion time on number of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N_values = np.arange(4, 30, 5)    \n",
+    "times_cg = []            \n",
+    "times_rich = []                     \n",
+    "\n",
+    "for N_value in N_values:\n",
+    "    A, b_vec = SLAE_compilation(N_value)\n",
+    "\n",
+    "    start = time.perf_counter()\n",
+    "    x, it, _ = conjugate_gradient(A=A, b_vec=b_vec, eps=1e-8, max_it=10000)\n",
+    "    times_cg.append(time.perf_counter() - start)\n",
+    "\n",
+    "    start = time.perf_counter()\n",
+    "    x2, it2, _ = Richardson(A=A, b_vec=b_vec, eps=1e-8, max_it=10000)\n",
+    "    times_rich.append(time.perf_counter() - start)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(7,5))\n",
+    "plt.semilogy(N_values, times_cg, color='blue', label='CG', marker='o')\n",
+    "plt.semilogy(N_values, times_rich, color='green', label='Richardson', marker='o')\n",
+    "plt.xlabel(\"N\")\n",
+    "plt.ylabel(\"time, s\")\n",
+    "plt.legend()\n",
+    "plt.grid(True, which='both')\n",
+    "plt.tight_layout()\n",
+    "plt.title(\"Computation time on number of nodes\")\n",
+    "plt.savefig(\"Computation time on number of nodes.pdf\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
