--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -311,7 +311,6 @@
     "def perturb_A(A, eps):\n",
     "    rng = np.random.default_rng()\n",
     "    E = rng.normal(size=A.shape)\n",
-    "    # симметризуем, если хочется SPD-шум: E = 0.5*(E+E.T)\n",
     "    normA = np.linalg.norm(A, ord='fro')\n",
     "    E = E / np.linalg.norm(E, ord='fro') * (eps * normA)\n",
     "    return A + E"
@@ -543,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_values = np.arange(4, 30, 5)    \n",
+    "N_values = np.arange(4, 55, 5)    \n",
     "times_cg = []            \n",
     "times_rich = []                     \n",
     "\n",
@@ -560,15 +559,15 @@
     "\n",
     "\n",
     "plt.figure(figsize=(7,5))\n",
-    "plt.semilogy(N_values, times_cg, color='blue', label='CG', marker='o')\n",
-    "plt.semilogy(N_values, times_rich, color='green', label='Richardson', marker='o')\n",
+    "plt.semilogy(N_values + 1, times_cg, color='blue', label='CG', marker='o')\n",
+    "plt.semilogy(N_values + 1, times_rich, color='green', label='Richardson', marker='o')\n",
     "plt.xlabel(\"N\")\n",
     "plt.ylabel(\"time, s\")\n",
     "plt.legend()\n",
     "plt.grid(True, which='both')\n",
-    "plt.tight_layout()\n",
     "plt.title(\"Computation time on number of nodes\")\n",
     "plt.savefig(\"Computation time on number of nodes.pdf\")\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
