implement Chebyshev acceleration

--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import copy\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "from typing import Tuple, List"
    ]
   },
   {
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +224,65 @@
     "        norms_rk.append(np.linalg.norm(r))\n",
     "\n",
     "    return x, it, norms_rk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Richardson_Chebyshev(A: np.ndarray, b_vec: np.ndarray, eps: float, max_it: int) -> tuple[np.ndarray, int, np.ndarray]:\n",
+    "    it = 0\n",
+    "    norms_rk = []\n",
+    "\n",
+    "    eigvals = np.linalg.eigvals(A)\n",
+    "    lambda_max = np.max(eigvals.real)\n",
+    "    lambda_min = np.min(eigvals.real)\n",
+    "    # print(f\"lambda_max = {lambda_max}\")\n",
+    "    # print(f\"lambda_min = {lambda_min}\")\n",
+    "\n",
+    "    c = (lambda_max + lambda_min) / 2.0\n",
+    "    d = (lambda_max - lambda_min) / 2.0\n",
+    "\n",
+    "    x = np.zeros_like(b_vec)\n",
+    "    r = b_vec - A @ x\n",
+    "\n",
+    "    while np.linalg.norm(r) > eps and it < max_it:\n",
+    "        mu_k = c + d * math.cos(math.pi * (2*it + 1) / (2*max_it))\n",
+    "        tau_cur = 1.0 / mu_k\n",
+    "\n",
+    "        x = x + tau_cur * r\n",
+    "        r = b_vec - A @ x\n",
+    "        it += 1\n",
+    "        norms_rk.append(np.linalg.norm(r))\n",
+    "\n",
+    "        # print(f\"iter {it:3d}, ||r|| = {np.linalg.norm(r):.3e}\")\n",
+    "\n",
+    "    return x, it, norms_rk\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# N = 54\n",
+    "# A, b_vec = SLAE_compilation(N)\n",
+    "\n",
+    "# x_cg, it_cg, r_cg = conjugate_gradient(A, b_vec, eps=1e-9, max_it=10000)\n",
+    "# x_rich, it_rich, r_rich = Richardson(A, b_vec, eps=1e-9, max_it = 10000)\n",
+    "# x_rich_cheb, it_rich_cheb, r_rich_cheb = Richardson_Chebyshev(A, b_vec, eps=1e-9, max_it=10000)\n",
+    "\n",
+    "# it_cg, it_rich, it_rich_cheb"
    ]
   },
   {
