fix Richardson method with Chebyshev acceleration

--- a/conj_grad_richardson.ipynb
+++ b/conj_grad_richardson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,11 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Richardson_Chebyshev(A: np.ndarray, b_vec: np.ndarray, eps: float, max_it: int) -> tuple[np.ndarray, int, np.ndarray]:\n",
+    "def Richardson_Chebyshev(A: np.ndarray, b_vec: np.ndarray, eps: float, max_it: int, N_param: int = 50) -> tuple[np.ndarray, int, np.ndarray]:\n",
     "    it = 0\n",
     "    norms_rk = []\n",
     "\n",
@@ -242,24 +242,23 @@
     "    # print(f\"lambda_max = {lambda_max}\")\n",
     "    # print(f\"lambda_min = {lambda_min}\")\n",
     "\n",
-    "    c = (lambda_max + lambda_min) / 2.0\n",
-    "    d = (lambda_max - lambda_min) / 2.0\n",
-    "\n",
     "    x = np.zeros_like(b_vec)\n",
     "    r = b_vec - A @ x\n",
-    "\n",
     "    while np.linalg.norm(r) > eps and it < max_it:\n",
-    "        mu_k = c + d * math.cos(math.pi * (2*it + 1) / (2*max_it))\n",
-    "        tau_cur = 1.0 / mu_k\n",
+    "        for k in range(1, N_param + 1):\n",
+    "            tau_k = 2.0 / (lambda_max + lambda_min + \n",
+    "                           (lambda_max - lambda_min) * np.cos((2*k - 1) * np.pi / (2 * N_param)))\n",
+    "            \n",
+    "            x = x + tau_k * r\n",
+    "            r = b_vec - A @ x\n",
+    "            \n",
+    "            it += 1\n",
+    "            norms_rk.append(np.linalg.norm(r))\n",
     "\n",
-    "        x = x + tau_cur * r\n",
-    "        r = b_vec - A @ x\n",
-    "        it += 1\n",
-    "        norms_rk.append(np.linalg.norm(r))\n",
+    "            if np.linalg.norm(r) <= eps or it >= max_it:\n",
+    "                break\n",
     "\n",
-    "        # print(f\"iter {it:3d}, ||r|| = {np.linalg.norm(r):.3e}\")\n",
-    "\n",
-    "    return x, it, norms_rk\n"
+    "    return x, it, np.array(norms_rk)\n"
    ]
   },
   {
@@ -275,14 +274,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# N = 54\n",
-    "# A, b_vec = SLAE_compilation(N)\n",
+    "N = 29\n",
+    "A, b_vec = SLAE_compilation(N)\n",
     "\n",
-    "# x_cg, it_cg, r_cg = conjugate_gradient(A, b_vec, eps=1e-9, max_it=10000)\n",
-    "# x_rich, it_rich, r_rich = Richardson(A, b_vec, eps=1e-9, max_it = 10000)\n",
-    "# x_rich_cheb, it_rich_cheb, r_rich_cheb = Richardson_Chebyshev(A, b_vec, eps=1e-9, max_it=10000)\n",
+    "x_cg, it_cg, r_cg = conjugate_gradient(A, b_vec, eps=1e-9, max_it=10000)\n",
+    "x_rich, it_rich, r_rich = Richardson(A, b_vec, eps=1e-9, max_it = 10000)\n",
+    "x_rich_cheb, it_rich_cheb, r_rich_cheb = Richardson_Chebyshev(A, b_vec, eps=1e-9, max_it=10000)\n",
     "\n",
-    "# it_cg, it_rich, it_rich_cheb"
+    "it_cg, it_rich, it_rich_cheb"
    ]
   },
   {
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_iterations_numbers = np.arange(1, 101, 10)\n",
+    "max_iterations_numbers = np.arange(1, 71)\n",
     "\n",
     "eps = 1e-10\n",
     "\n",
@@ -325,6 +324,7 @@
     "    A, b_vec = SLAE_compilation(N)\n",
     "    errors_cg = []\n",
     "    errors_rich = []\n",
+    "    errors_rich_cheb = []\n",
     "    numbers_of_iterations = []\n",
     "\n",
     "    u_ex = exact_vector(N)\n",
@@ -332,12 +332,15 @@
     "    for max_it in max_iterations_numbers:\n",
     "        u_cg, it_cg, _ = conjugate_gradient(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "        u_rich, it_rich, _ = Richardson(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
+    "        u_rich_cheb, it_rich_cheb, _ = Richardson_Chebyshev(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "        errors_cg.append(np.max(np.abs(u_cg - u_ex)))\n",
     "        errors_rich.append(np.max(np.abs(u_rich - u_ex)))\n",
+    "        errors_rich_cheb.append(np.max(np.abs(u_rich_cheb - u_ex)))\n",
     "\n",
     "    ax = axes[index]\n",
-    "    ax.semilogy(max_iterations_numbers, errors_cg, color = 'blue', marker=\"o\", label=\"CG\")\n",
-    "    ax.semilogy(max_iterations_numbers, errors_rich, color = 'green', marker=\"s\", label=\"Richardson\")\n",
+    "    ax.semilogy(max_iterations_numbers, errors_cg, color = 'blue', label=\"CG\")\n",
+    "    ax.semilogy(max_iterations_numbers, errors_rich, color = 'green', label=\"Richardson\")\n",
+    "    ax.semilogy(max_iterations_numbers, errors_rich_cheb, color = 'purple', label=\"Richardson + CA\")\n",
     "    ax.set_title(f\"N={N}\")\n",
     "    ax.set_xlabel(\"number of iterations\")\n",
     "    ax.set_ylabel(\"||u - u_ex||\")\n",
@@ -359,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,29 +404,34 @@
    "source": [
     "N = 29\n",
     "eps_values = [1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3]\n",
-    "iters_cg, iters_rich = [], []\n",
-    "errors_cg, errors_rich = [], []\n",
+    "iters_cg, iters_rich, iters_rich_cheb = [], [], []\n",
+    "errors_cg, errors_rich, errors_rich_cheb = [], [], []\n",
     "A, b_vec = SLAE_compilation(N)\n",
     "x_cg, it_cg, _ = conjugate_gradient(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "x_rich, it_rich, _ = Richardson(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
+    "x_rich_cheb, it_rich_cheb, _ = Richardson_Chebyshev(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "for eps_value in eps_values:\n",
     "    A_pert = perturb_A(A=A, eps=eps_value)\n",
     "    x_cg_p, it_cg_p, _ = conjugate_gradient(A=A_pert, b_vec=b_vec, eps=1e-10, max_it=max_it)\n",
     "    x_rich_p, it_rich_p, _ = Richardson(A=A_pert, b_vec=b_vec, eps=eps, max_it=max_it)\n",
+    "    x_rich_cheb_p, it_rich_cheb_p, _ = Richardson_Chebyshev(A=A_pert, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "    error_solution_cg = np.linalg.norm(x_cg_p - x_cg)\n",
     "    error_solution_rich = np.linalg.norm(x_rich_p - x_rich)\n",
-    "    iters_cg.append(it_cg_p)\n",
+    "    error_solution_rich_cheb = np.linalg.norm(x_rich_cheb_p - x_rich_cheb)\n",
+    "\n",
     "    errors_cg.append(error_solution_cg)\n",
     "    errors_rich.append(error_solution_rich)\n",
+    "    errors_rich_cheb.append(error_solution_rich_cheb)\n",
     "    # print(f\"eps = {eps_value}\\n\")\n",
     "    # print(f\"||x_p = x|| = {error_solution_cg}\\n\")\n",
     "    # print(f\"Non-perturbated: {it_cg} iterations, perturbated: {it_cg_p} iterations \\n\\n\")\n",
     "\n",
     "plt.loglog(eps_values, errors_cg, marker = \"o\", color=\"blue\")\n",
     "plt.loglog(eps_values, errors_rich, marker = \"o\", color = \"green\")\n",
+    "plt.loglog(eps_values, errors_rich_cheb, marker = \"o\", color = \"violet\")\n",
     "plt.xlabel(\"Disturbance amplitude ε\")\n",
     "plt.ylabel(\"||x_pert - x||\")\n",
-    "plt.title(f\"Solution stability (both), {N + 1} nodes\")\n",
+    "plt.title(f\"Solution stability (all), {N + 1} nodes\")\n",
     "plt.grid(True, which=\"both\")\n",
     "plt.savefig(\"Solution_stability.pdf\")\n",
     "plt.show()"
@@ -431,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,13 +569,16 @@
     "    A, b_vec = SLAE_compilation(N)\n",
     "    x_cg, it_cg, rk_cg = conjugate_gradient(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "    x_rich, it_rich, rk_rich = Richardson(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
+    "    x_rich_cheb, it_rich_cheb, rk_rich_cheb = Richardson_Chebyshev(A=A, b_vec=b_vec, eps=eps, max_it=max_it)\n",
     "\n",
     "    iters_cg = np.arange(0, it_cg)\n",
     "    iters_rich = np.arange(0, it_rich)\n",
+    "    iters_rich_cheb = np.arange(0, it_rich_cheb)\n",
     "\n",
     "    ax = axes[ind]\n",
     "    ax.semilogy(iters_cg, rk_cg, label=\"CG\", color = \"blue\")\n",
     "    ax.semilogy(iters_rich, rk_rich, label=\"Richardson\", color = \"green\")\n",
+    "    ax.semilogy(iters_rich_cheb, rk_rich_cheb, label=\"Richardson + CA\", color = \"violet\")\n",
     "    ax.axhline(y = 1e-5, color = \"red\")\n",
     "    ax.grid(True)\n",
     "    ax.set_title(f\"N = {N + 1}\")\n",
@@ -590,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
